examples/test/testpolicy3738.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3738
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key7: value16
      key34: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value45
          key31: value0
      podSelector:
        matchLabels:
          key28: value39
